html, javascript, css

--- a/c01_webapp_intro/ch01_getting_started/tags.html
+++ b/c01_webapp_intro/ch01_getting_started/tags.html
@@ -1,1 +1,101 @@
-html
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>htmlについて</title>
+    <link rel="stylesheet" href="tags.css">
+</head>
+<body>
+    <h1>htmlについて</h1>
+    <h2>htmlについて</h2>
+    <h3>htmlについて</h3>
+    <h4>htmlについて</h4>
+    <h5>htmlについて</h5>
+    <h6>htmlについて</h6>
+    <h7>htmlについて</h7>
+    <p>HTML タグは、文章をマークアップすることで、文章に意味を与えることができます</p>
+    HTML タグは、文章をマークアップすることで、文章に意味を与えることができます HTML タグは、文章をマークアップすることで、文章に意味を与えることができます HTML タグは、文章をマークアップすることで、文章に意味を与えることができます
+    <p>HTML タグは、文章をマークアップすることで、文章に意味を与えることができます</p>
+    <p>HTML タグは、文章をマークアップすることで、文章に意味を与えることができます</p>
+    <p>HTML タグは、文章をマークアップすることで、文章に意味を与えることができます</p>
+    <a href="https://github.com/kiyomizuhi">my github</a><br>
+    <a href="http://nnn.ed.jp/">N高校のホームページ</a><br>
+    <img src="http://nnn.ed.jp/common/img/logo_nschool.png" alt="logo">
+    <ul>
+        <li>kaka</li>
+        <li>pipi</li>
+        <li>kapi</li>
+        <li>gugu</li>
+        <li>gupi</li>
+        <li>kagu</li>
+    </ul>
+    <ol>
+        <li>kaka</li>
+        <li>pipi</li>
+        <li>kapi</li>
+        <li>gugu</li>
+        <li>gupi</li>
+        <li>kagu</li>
+    </ol>
+    <table>
+        <tr>
+            <th>タグ名</th>
+            <th>意味</th>
+        </tr>
+        <tr>
+            <td>h</td>
+            <td>意味</td>
+        </tr>
+        <tr>
+            <td>p</td>
+            <td>段落</td>
+        </tr>
+        <tr>
+            <td>a</td>
+            <td>リンク</td>
+        </tr>
+        <tr>
+            <td>img</td>
+            <td>画像</td>
+        </tr>
+        <tr>
+            <td>ul</td>
+            <td>順序無しリスト</td>
+        </tr>
+        <tr>
+            <td>table</td>
+            <td>表</td>
+        </tr>
+    </table>
+    <ul>
+        <ul>b1
+            <li>a1</li>
+            <li>a2</li>
+            <li>a3</li>
+        </ul>
+        <ul>b2
+            <li>a1</li>
+            <li>a2</li>
+            <li>a3</li>
+        </ul>
+    </ul>
+    <ul>
+        <li>b1
+            <ul>
+                <li>a1</li>
+                <li>a2</li>
+                <li>a3</li>
+            </ul>
+        </li>
+        <li>b2
+            <ul>
+                <li>a1</li>
+                <li>a2</li>
+                <li>a3</li>
+            </ul>
+        </li>
+    </ul>
+</body>
+</html>
